tests/snapshots/examples_fixtures/benchmarks__fib_bench.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/benchmarks/fib_bench.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
