tests/snapshots/examples_fixtures/benchmarks__sum_bench.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/benchmarks/sum_bench.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
